# Clinical-RAG-system

./: .gitignore  Dockerfile  README.md  README_template.md  app.py  blog_post_template.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
evaluation/: gold_qa.json  gold_qa_layperson.json
evaluation/experiment_results/: fixed_1024_naive.json  fixed_2000_hyde.json  fixed_512_hyde.json  fixed_512_naive.json  semantic_hyde.json  semantic_naive.json
evaluation/experiment_results_expert/: fixed_1024_hyde.json  fixed_2000_naive.json  fixed_512_hyde.json
evaluation/experiment_results_layperson/: fixed_1024_hyde.json  fixed_1024_naive.json  fixed_2000_hyde.json  fixed_2000_naive.json  fixed_512_hyde.json  fixed_512_naive.json  semantic_hyde.json  semantic_naive.json
scripts/: 01_ingest_pdfs.py  02_chunk_texts.py  03_build_faiss_index.py  04_query.py  05_autofill_eval.py  05_build_eval_dataset.py  05_evaluate.py  06_run_experiments.py
src/clinical_rag/: chunking.py  chunking_strategies.py  evaluation.py  indexing.py  io_utils.py  llm.py  pdf_extract.py  pipeline.py  prompting.py  retriever.py  settings.py
tests/: conftest.py  test_rag_system.py
